--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -60,9 +60,10 @@ spec:
       persistence:
         cache:
           enabled: true
-          type: emptyDir
+          type: persistentVolumeClaim
           accessMode: ReadWriteOnce
           size: 10Gi
+          storageClass: ceph-block
 
       controllers:
         main:
