--- a/kubernetes/apps/default/immich/ks.yaml
+++ b/kubernetes/apps/default/immich/ks.yaml
@@ -22,6 +22,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 500Gi
+      VOLSYNC_CACHE_CAPACITY: 100Gi
   prune: true 
   retryInterval: 1m
   sourceRef:
