--- a/kubernetes/apps/observability/headlamp/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/headlamp/app/externalsecret.yaml
@@ -14,10 +14,10 @@ spec:
     template:
       engineVersion: v2
       data:
-        clientID: "{{ .OIDC_CLIENT_ID }}"
-        clientSecret: "{{ .OIDC_CLIENT_SECRET }}"
-        issuerURL: "{{ .OIDC_IDP_ISSUER_URL }}"
-        scopes: "{{ .OIDC_SCOPES }}"
+        OIDC_CLIENT_ID: "{{ .OIDC_CLIENT_ID }}"
+        OIDC_CLIENT_SECRET: "{{ .OIDC_CLIENT_SECRET }}"
+        OIDC_ISSUER_URL: "{{ .OIDC_IDP_ISSUER_URL }}"
+        OIDC_SCOPES: "{{ .OIDC_SCOPES }}"
   dataFrom:
     - extract:
         key: headlamp
