--- a/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
@@ -5,7 +5,7 @@ kind: HelmRelease
 metadata:
   name: &app headlamp
   annotations:
-    reloader.stakater.com/auto: "true"
+    secret.reloader.stakater.com/reload: &secret "headlamp-secret"
 spec:
   interval: 1h
   chartRef:
@@ -18,7 +18,7 @@ spec:
       oidc:
         externalSecret:
           enabled: true
-          name: "headlamp-secret"
+          name: *secret
     securityContext:
       runAsNonRoot: true
       runAsUser: 1000
